# treasury

./: .gitignore  Cargo.toml  DESIGN.md  deny.toml  docker-compose.yml  input.css  package-lock.json  package.json  policies.csv
.sqlx/: query-0b4a60553f0369d862dee7b9b7a58ace3f82ed5ac6d223d9e2bbd1857f0dd579.json  query-0fea80f77f12d0f2de63b14eb728bb02ea26ddba645af931828a3aa6b7eef1c2.json  query-31d4c20016dd93d39e79af2f45110d7d43c7ba7eba1031744e21701d184579b6.json  query-34d47aec412763c5afba5c0dc9898358c483de5b41bc7674bac0b9ea4629f1b2.json  query-3bf66fe4fc1f42830401cdb5b57379525cf9752b84f47fd096477b500f5ccca5.json  query-4cf99691c40e5e2c24734f0a4b879f9a18a08995be0adb81de1165d848782709.json  query-54f53f0a49b547d94d1e32a75254da7417f8736b6b177bc6030f22ca28176556.json  query-6522dd740b666720945e17ab96978d10c6b6c01a66ba2ff0dd7b4d0fbef370dc.json  query-66588108446267022dce449c6d3e437ffcd48f13b36dd22551f2987959273ae8.json  query-667e412fda291d58cfab7124950adc1ed6424f56282a144733371b178bfa48a4.json  query-6a35477bc7b95338a358a756fb9b121f3c6cd0f726bb82faeda45b370850d065.json  query-6d9c0d6f6988d9294b72846b7bd03894f0faef70213597d140eb3f74c5e22ab3.json  query-80820d92c8b4438f1fdeb377203611a971916b84a12c90ccbc29cf13fd53390b.json  query-82824d75ff174f227ca1197ccfacf0511f576ffac79a187eaf7c58b4e5e36bf0.json  query-86eaa7ca526a3a927c7dc402259cd7be3382d6f5b0c694996cd5daef55282489.json  query-8c9abbbc71cb0823d59c686053f2976e129115ebb2f8b85ec1ec0001fb1d7941.json  query-927f827a44caeb907071c51b1c49cf8ae6f51941f09031162c5defce078a1323.json  query-95ce8581c08b48c30090085343b6fc23fa37a4bd0ef5a5505ac5e954dec18d9b.json  query-9abdf134cfe5f2321c6585d1e6adb1f353fc015a53d7c78f952f13b8c2e15575.json  query-9bbe3e366722c9898fa28fda232506237b38842663effb2cbac0f45b2ff2bd05.json  query-a14daee4c2d864878d97a3e41bd4faed445bc59f55e525d4a7ac3554dea6b88b.json  query-b4c930d4c3b846c7af4c7e621dfa2955ffe308ee16cc6902a6e7071581e260aa.json  query-c505e7d2bc9b17da10ff948d8c65cabc5fe3e873ccbc52940cba9cda123c3779.json  query-c5a6be42fdf3e141b7bc421d01bf02b8f0b965e8c49329019ae250f1bfac2965.json  query-cb6c948ba27d61521d02b5870988d645c70e93b457458c9b62c7f114d05bd0fb.json  query-d593d5ec95dede46e700285830ccce9d443dced8cb2915d6ac5d2f7c2fcfd094.json  query-d6f275af4b3913c7c5991fdc27875bb7845fc114b30ee70fbbe35a8cc5308bef.json  query-d752e208f41db9fd89b28df7fec67ff3c05d61aab3594df42bb60bde0e49c2b2.json  query-dc5dca988417a44968101eb7e8dfeadcd6697e35ac5a9013cfba64e780939b91.json  query-de8079969ba8bb8c67515b25f0c94cc08b5cbecf8ce50f4061af9ffd61443187.json  query-dfc2eb10a74e114691b3c97216a511b497b60d75797a4853659d4a9d66d887b3.json  query-e47df3d69db4bf415e207e84f2d27dbe7a9763c311da2b37d235e32ca84b4322.json  query-e559b8d294079838eb92abc891033b105a6b5d83245964360f27f1231ce1942a.json  query-fd9b75f476b8d71d04084d69421e05cc5b8ae94478ce7f2284b700b7a27fceaa.json
end2end/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
end2end/tests/: example.spec.ts
local/: custom_ldap.ldif  dex_config.yml
migrations/: 20250222172501_initial_migration.sql  20250301073803_initial_migration.down.sql  20250301073803_initial_migration.up.sql  20250301074453_cursor_keys.down.sql  20250301074453_cursor_keys.up.sql  20250304123428_sub_and_iss_on_user.down.sql  20250304123428_sub_and_iss_on_user.up.sql  20250305155722_institutions.down.sql  20250305155722_institutions.up.sql  20250307124157_accounts.down.sql  20250307124157_accounts.up.sql  20250311112800_assets.down.sql  20250311112800_assets.up.sql  20250313131227_transactions.down.sql  20250313131227_transactions.up.sql  20250330031222_tokens.down.sql  20250330031222_tokens.up.sql
src/: lib.rs  main.rs
src/api/: account_api.rs  asset_api.rs  client.rs  docs_api.rs  error.rs  institution_api.rs  mod.rs  transaction_api.rs  user_api.rs
src/api/fixtures/: assets.sql  institutions.sql
src/app/: accounts.rs  assets.rs  auth.rs  home.rs  institutions.rs  mod.rs  transactions.rs  users.rs
src/authentication/: authenticated_token.rs  authenticated_user.rs  authenticator.rs  mod.rs  registered_user.rs  well_known.rs
src/authorization/: actions.rs  mod.rs  policy.rs  resources.rs  roles.rs
src/model/: account.rs  asset.rs  csrf_token.rs  cursor_key.rs  institution.rs  mod.rs  transaction.rs  user.rs
src/resource/: account_repository.rs  asset_repository.rs  csrf_token_repository.rs  cursor_key_repository.rs  institution_repository.rs  mod.rs  transaction_repository.rs  user_repository.rs
src/schema/: account.rs  asset.rs  institution.rs  mod.rs  transaction.rs  user.rs
src/service/: account_service.rs  account_service_factory.rs  asset_service.rs  asset_service_factory.rs  institution_service.rs  institution_service_factory.rs  mod.rs  transaction_service.rs  transaction_service_factory.rs  user_service.rs  user_service_factory.rs
style/: output.css
