[package]
name = "treasury"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
aes-gcm-siv = "0.11.1"
aide = { version = "^0.14.1", features = [
    "redoc",
    "swagger",
    "scalar",
    "axum-json",
    "axum-query",
    "axum-tokio",
    "axum-multipart",
    "axum-original-uri",
    "axum-ws",
    "axum-matched-path",
    "axum-form",
    "axum-extra",
    "axum-extra-headers",
    "axum-extra-query",
    "axum-extra-form",
    "axum-extra-cookie",
    "axum-extra-cookie-private",
    "axum-extra-json-deserializer",
    "macros",
] }
async-std = {version = "^1.13.0", features = ["attributes"]}
async-trait = "^0.1.87"
axum = {version = "^0.8.1", features = ["http2", "macros"]}
axum-extra = {version = "^0.10.0", features = ["tracing"]}
base64 = "0.22.1"
cached = {version = "^0.55.1", features = ["async"]}
casbin = "^2.10.1"
chrono = "^0.4.40"
crypto-common = "^0.1.6"
derive_more = {version = "^2.0.1", features = ["full"]}
futures-util = "^0.3.31"
http = "^1.2.0"
indexmap = "^2.7.1"
jsonwebtoken = "^9.3.1"
rand = "^0.9.0"
reqwest = {version = "^0.12.12", features = ["json"]}
rstest = {version = "^0.25.0"}
schemars = {version = "^0.8.22", features = ["chrono", "uuid1", "preserve_order"]}
serde = {version = "^1.0.218", features = ["derive"]}
serde_json = {version = "^1.0.139", features = ["preserve_order"]}
sqlx = {version = "^0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "derive", "migrate", "uuid", "chrono"]}
thiserror = "^2.0.12"
tokio = {version = "^1.43.0", features = ["full"]}
tower = "^0.5.2"
tower-http = {version = "^0.6.2", features = ["trace", "auth", "cors", "compression-gzip", "timeout"]}
tracing = "^0.1.41"
tracing-subscriber = {version = "^0.3.19", features = ["env-filter"]}
uuid = {version = "^1.15.1", features = ["v4", "serde"]}
zerocopy = {version = "^0.8.21", features = ["std", "simd"]}
zerocopy-derive = "^0.8.21"

[dev-dependencies]
http-body-util = "^0.1.2"
