[package]
name = "treasury"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm-siv = {version = "0.11.1", optional = true}
async-trait = {version = "^0.1.88", optional = true}
axum = {version = "^0.8.3", features = ["http2", "macros"], optional=true}
axum-extra = {version = "^0.10.1", features = ["tracing", "cookie"], optional=true}
base64 = "^0.22.1"
cached = {version = "^0.55.1", features = ["async"], optional = true}
casbin = {version = "^2.10.1", optional = true}
chrono = "^0.4.40"
console_error_panic_hook = {version = "^0.1.7", optional = true}
crypto-common = {version = "^0.1.6", optional = true}
derive_more = {version = "^2.0.1", features = ["full"]}
futures-util = {version = "^0.3.31", optional = true}
futures = {version = "^0.3.31"}
http = {version = "^1.3.1", optional = true}
indexmap = {version = "^2.9.0", optional = true}
jsonwebtoken = {version = "^9.3.1", optional = true}
leptos = {git = "https://github.com/leptos-rs/leptos", branch = "main"}
leptos_axum = {git = "https://github.com/leptos-rs/leptos", branch = "main", optional = true}
leptos_meta = {git = "https://github.com/leptos-rs/leptos", branch = "main"}
leptos_router = {git = "https://github.com/leptos-rs/leptos", branch = "main"}
oauth2 = {version = "^5.0.0", optional = true}
rand = {version = "^0.9.0", optional = true}
reqwest = {version = "^0.12.15", features = ["json"]}
serde = {version = "^1.0.219", features = ["derive"]}
serde_json = {version = "^1.0.140", features = ["preserve_order"]}
sha2 = "^0.10.8"
sqlx = {version = "^0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "derive", "migrate", "uuid", "chrono"], optional = true}
thiserror = "^2.0.12"
time = {version = "^0.3.41", optional = true}
tokio = {version = "^1.44.2", features = ["full"], optional = true}
tower = {version = "^0.5.2", optional = true}
tower-http = {version = "^0.6.2", features = ["trace", "auth", "cors", "compression-gzip", "timeout"], optional = true}
tracing = {version = "^0.1.41", optional = true}
tracing-subscriber = {version = "^0.3.19", features = ["env-filter"], optional = true}
urlencoding = "^2.1.3"
utoipa = {version = "^5.3.1", optional = true, features = ["axum_extras", "debug", "chrono", "uuid", "preserve_order", "preserve_path_order", "indexmap"]}
utoipauto = {version = "^0.3.0-alpha.2", optional = true}
utoipa-swagger-ui = {version = "^9.0.1", features = ["axum", "debug", "cache"], optional = true}
uuid = {version = "^1.16.0", features = ["v4", "serde", "js"]}
wasm-bindgen = {version = "^0.2.100", optional = true}
web-sys = {version = "^0.3.77", features = ["Crypto", "Window", "Storage"]}
zerocopy = {version = "^0.8.24", features = ["std", "simd"], optional = true}
zerocopy-derive = {version = "^0.8.24", optional = true}

[dev-dependencies]
http-body-util = {version = "^0.1.3"}
rstest = {version = "^0.25.0"}

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:aes-gcm-siv",
    "dep:async-trait",
    "dep:axum",
    "dep:axum-extra",
    "dep:cached",
    "dep:casbin",
    "dep:crypto-common",
    "dep:futures-util",
    "dep:http",
    "dep:indexmap",
    "dep:jsonwebtoken",
    "dep:leptos_axum",
    "dep:oauth2",
    "dep:rand",
    "dep:sqlx",
    "dep:time",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:utoipa",
    "dep:utoipauto",
    "dep:utoipa-swagger-ui",
    "dep:zerocopy",
    "dep:zerocopy-derive",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "treasury"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:8080"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-input-file = "input.css"
